<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/ll_back_image"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_back_image_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/poster_film_alita"
                android:scaleType="matrix"
                android:contentDescription="@string/cd_back_image_detail"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/transparant_gradient" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_back"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/cd_back_arrow"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_back"
            android:layout_marginTop="150dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp"
            app:cardMaxElevation="6dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/iv_image_detail"
                android:layout_width="145dp"
                android:layout_height="216dp"
                android:src="@drawable/poster_film_alita"
                android:contentDescription="@string/cd_image_poster"
                android:scaleType="fitXY"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:text="@string/title_detail"
            android:maxLines="2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/title"
            android:layout_below="@+id/ll_back_image"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginEnd="35dp"
            android:text="@string/category_detail"
            android:textColor="@color/category"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:id="@+id/ll_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_category"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="190dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_star"
                android:contentDescription="@string/cd_rating_star"/>

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/rating_detail"
                android:textColor="@color/category" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_image_detail"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:text="@string/txt_release_date"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/title"/>

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_release_date"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:text="@string/release_detail"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_release"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/txt_overview"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/title"/>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_overview"
            android:layout_marginTop="4dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="24dp"
            android:text="@string/overview_detail"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_overview"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/source_the_movie_database"
            android:textStyle="italic"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/progress_bar_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:contentDescription="Floating Button Favorite"
            android:foregroundGravity="bottom"
            android:elevation="4dp"
            android:src="@drawable/ic_favorite_disable"
            app:fabSize="normal"/>

    </RelativeLayout>

</ScrollView>